Fixed overflow on experience section

--- a/src/index.css
+++ b/src/index.css
@@ -46,10 +46,12 @@
 
 html {
   scroll-behavior: smooth;
+
 }
 
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 
 h1,
